@@ -1,3 +1,8 @@
+1999-06-05  Harri Porten  <porten@kde.org>
+
+	* pppstats.cpp: dropping the ifr_name #define hack allows compilation
+	with --enable-final (saves 20 kB size)
+
 1999-05-30  Harri Porten  <porten@kde.org>
 
 	* connect.cpp: skip setting the volume if command is empty
